# Doc-RAG

./: README.md  pyproject.toml
src/doc_rag/: cli.py  embedder.py  retriever.py  scraper.py  ui.py  utils.py
